# the-scratch

./: .bowerrc  .dockerignore  .editorconfig  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  bower.json  elm-package.json  graphql.config.json  mix.exs  package-lock.json  package.json
config/: config.exs  dev.exs  prod.exs  test.exs
lib/: guardian_serializer.ex  the_scratch.ex  vfs.ex  web_spa.ex
lib/schema/: user.ex
lib/the_scratch/: couchbase.ex  endpoint.ex  helper.ex  native.ex  proto.ex
lib/web_spa/: endpoint.ex  repo.ex
native/the-scratch/: Cargo.toml  README.md
native/the-scratch/src/: lib.rs
priv/repo/migrations/: 20170720121252_create_users_table.exs
proto/: blockchain.proto  currency_pair.proto  order.proto  user.proto
test/controllers/: page_controller_test.exs
test/lib/: vfs_test.exs
test/support/: channel_case.ex  conn_case.ex
test/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/web/views/: error_view_test.exs  layout_view_test.exs
web/: gettext.ex  router.ex  schema.ex  web.ex
web/channels/: room_channel.ex  user_socket.ex
web/controllers/: auth_controller.ex  page_controller.ex
web/elm/: Application.elm  Assets.elm  Main.elm  Model.elm  Msg.elm  Navbar.elm  Page.elm  Ports.elm  Route.elm
web/elm/Data/: Session.elm  User.elm
web/graphql/: user.graphql  users.graphql
web/resolvers/: user_resolver.ex  users_resolver.ex
web/schema/: types.ex
web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
webpack/: webpack.config.js
(+39 files in other folders)
